--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset="UTF-8">
-      <title>First Document</title>
+      <title>First Docuent</title>
       <link rel="stylesheet" href="stilark.css">
   </head>
 
